--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to Thizzle's Cyber Den</title>
+  <title>Thizzle</title>
   <style>
     body {
       background-color: #000000;
