--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Thizzle</title>
+  <title>Welcome to Thizzle's Cyber Den</title>
   <style>
     body {
       background-color: #000000;
@@ -55,6 +55,18 @@
       margin-top: 20px;
     }
 
+    .bandcamp {
+      display: block;
+      margin: 50px auto;
+      max-width: 600px;
+    }
+
+    .youtube {
+      display: block;
+      margin: 50px auto;
+      max-width: 600px;
+    }
+
     .footer {
       text-align: center;
       margin-top: 50px;
@@ -83,9 +95,9 @@
       <p>Prepare yourself for a mind-blowing audiovisual experience with Thizzle, the ultimate techno sensation!</p>
       <p>Stay tuned for our upcoming shows and be ready to dance your heart out!</p>
     </div>
-  </div>
-  <div class="footer">
-    &copy; 2023 Thizzle. All rights reserved. | Website by <a href="#">TechnoWeb Designs</a>
-  </div>
-</body>
-</html>
+    <div class="bandcamp">
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=YOUR_ALBUM_ID/size=large/bgcol=000000/linkcol=00ff00/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://thizzle.bandcamp.com/album/your-album">Your Album</a></iframe>
+    </div>
+    <div class="youtube">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TkA3vQ
+
