--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to Thizzle's Cyber Den</title>
+  <title>Thizzle, the Band</title>
   <style>
     body {
       background-color: #000000;
@@ -82,18 +82,17 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Discography</a></li>
-        <li><a href="#">Tour</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </div>
   <div class="content">
-    <h2>Welcome to Thizzle's Techno Universe!</h2>
+    <h2>Thizzle</h2>
     <img src="thizzle_logo.gif" alt="Thizzle Logo">
     <div class="text">
-      <p>Prepare yourself for a mind-blowing audiovisual experience with Thizzle, the ultimate techno sensation!</p>
-      <p>Stay tuned for our upcoming shows and be ready to dance your heart out!</p>
+      <p>Thizzle is the electronic music project of a guy who lives in Central Pennsylvania</p>
+      <p>Their debut album, Sommelier, is available now on Bandcamp and YouTube, where it is accompanied by vintage NBA highlights</p>
     </div>
     <div class="bandcamp">
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=YOUR_ALBUM_ID/size=large/bgcol=000000/linkcol=00ff00/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://thizzle.bandcamp.com/album/your-album">Your Album</a></iframe>
