--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <p>Their debut album, Sommelier, is available now on Bandcamp and YouTube, where it is accompanied by vintage NBA highlights</p>
     </div>
     <div class="bandcamp">
-      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=YOUR_ALBUM_ID/size=large/bgcol=000000/linkcol=00ff00/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://thizzle.bandcamp.com/album/your-album">Your Album</a></iframe>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3757698146/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/track=1340764170/transparent=true/" seamless><a href="https://thizzle.bandcamp.com/album/sommelier">Sommelier by Thizzle</a></iframe>
     </div>
     <div class="youtube">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/TkA3vQ
+      <iframe width="1280" height="480" src="https://www.youtube.com/embed/TkA3vQc-uxM" title="Thizzle - Alone (Official Music Video / Allen Iverson Highlights)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
